# talks

algorithmic-complexity/: Makefile  growth.gnuplot  main.tex
almost-free-lunch/: Makefile  almost-free-lunch.tex
building-python/: Makefile  building-python.tex  travis.yml
building-python/my-package/: CMakeLists-zlib.txt  CMakeLists.txt  custom-target.cmake  scikit-build.py  setuptools-ext.py  setuptools-ext11.py  setuptools-pure.py  template-div1.cpp  template-div2.cpp
building-python/my-package/my_package/math/: math.c  math11.cpp
c++-compiler/: 99-bottles.txt  Makefile  talk.rst  viz-inheritance.dot
git-beyond-push-and-pull/: Makefile  gcc-test.sh  main.md  notes.md  segyio-rebase.sh
introduction-to-software-packaging/: Makefile  default.guix  slides.css  slides.md
mcdc-in-gcc/: Makefile  default.nix  fig13-4.dot  fig13-5.dot  fig13-6.dot  fig13-8.dot  fig2.dot  fig3.dot  fig4.dot  fig5-4.dot  fig6-5.dot  fig8.dot  mcdc-in-gcc.tex
modified-condition-decision-coverage/: Makefile  gcov-19.c
open-source-spe-equador/: Makefile  talk.md
red-riding-hood-forest-kd-trees/: Makefile  disposition.md  eisvogel.tex  plot.py  talk.html  talk.md
rediscovering-fire/: Makefile
segyio-description/: Makefile  cut.py  f-trace.py  f3.py  read-trace.dot  resample.py  segyio-description.tex  segyio-poster.tex  segyio.bib  simple-plot.py  virtual-array.tex
theory-makes-beautiful-programs/: Makefile  default.nix  fig10-1.dot  fig10-2.dot  fig11-2.dot  fig11-3.dot  fig12-1.dot  fig12-2.dot  fig12-3.dot  fig12-4.dot  fig13-1.dot  fig13-2.dot  fig13-3.dot  fig13-5.dot  (+24 more)
(+91 files in other folders)
